made design-a-blog responsive and styled it nicely :)

--- a/design-a-blog/index.html
+++ b/design-a-blog/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="siteWrap">
         <nav class="navTab">
-            <button class="navButtons">Home</button>
-            <button class="navButtons">Team</button>
-            <button class="navButtons">News</button>
-            <button class="navButtons">Help</button>
+            <button class="navButtons"><b>H</b>ome</button>
+            <button class="navButtons"><b>T</b>eam</button>
+            <button class="navButtons"><b>N</b>ews</button>
+            <button class="navButtons"><b>H</b>elp</button>
         </nav>
         <header>
             <h1 class="titleHeader">learnToCode()</h1>
