Name-entry stores info upon submit

--- a/design-a-blog/index.html
+++ b/design-a-blog/index.html
@@ -60,7 +60,7 @@
             </button>
         </main>
         <button class="viewMore">View More</button>
-        <footer>
+        <footer class="footClass">
             <h2>This is the Footer</h2>
             <p>this is the footer content this is the footer content this is the footer content this is the footer
                 content
