created button App with Higher Order Functions

--- a/design-a-blog/index.html
+++ b/design-a-blog/index.html
@@ -17,7 +17,7 @@
             <button class="navButtons"><b>N</b>ews</button>
             <button class="navButtons"><b>H</b>elp</button>
         </nav>
-        <header>
+        <header class="headerClass">
             <h1 class="titleHeader">learnToCode()</h1>
             <p class="introPar">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, enim cumque est explicabo soluta
