--- a/mikkis/index.html
+++ b/mikkis/index.html
@@ -8,6 +8,63 @@
   <title>Mikki's</title>
 </head>
 <body>
-  
+  <div class="site-wrap">
+      <nav class="nav-tab">
+          <button class="nav-buttons"><b>H</b>ome</button>
+          <button class="nav-buttons"><b>M</b>enu</button>
+          <button class="nav-buttons"><b>E</b>vents</button>
+          <button class="nav-buttons"><b>H</b>elp</button>
+      </nav>
+      <header class="headerClass">
+          <h1 class="titleHeader">Mikki's</h1>
+          <p class="introPar">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, enim cumque est explicabo soluta
+              iure rerum asperiores, veritatis exercitationem magnam voluptatibus! Nam culpa, et eligendi corrupti
+              repellat accusantium reiciendis magnam!
+          </p>
+      </header>
+      <main>
+          <button class="clickBlog" style="background-image: url(https://images.pexels.com/photos/330771/pexels-photo-330771.jpeg?cs=srgb&dl=code-coding-computer-330771.jpg&fm=jpg); background-size: cover;">
+              <h3>Blog Title</h3>
+              <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, enim dolorum voluptatum
+                  perferendis neque, eos pariatur excepturi ipsum quasi magni necessitatibus fugit reiciendis, rem
+                  vel suscipit distinctio aspernatur mollitia voluptas.
+              </p>
+          </button>
+          <button class="clickBlog" style="background-image: url(https://images.pexels.com/photos/247791/pexels-photo-247791.png?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover;">
+              <h3>Blog Title</h3>
+              <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad est facilis adipisci! Officia iusto
+                  impedit ad illo, voluptates fugit, sequi repellat tenetur maxime quae velit nemo at unde incidunt
+                  obcaecati.
+              </p>
+          </button>
+          <button class="clickBlog" style="background-image: url(https://images.pexels.com/photos/270632/pexels-photo-270632.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover;">
+              <h3>Blog Title</h3>
+              <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad est facilis adipisci! Officia iusto
+                  impedit ad illo, voluptates fugit, sequi repellat tenetur maxime quae velit nemo at unde incidunt
+                  obcaecati.
+              </p>
+          </button>
+          <button class="clickBlog" style="background-image: url(https://images.pexels.com/photos/1089438/pexels-photo-1089438.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover;">
+              <h3>Blog Title</h3>
+              <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad est facilis adipisci! Officia iusto
+                  impedit ad illo, voluptates fugit, sequi repellat tenetur maxime quae velit nemo at unde incidunt
+                  obcaecati.
+              </p>
+          </button>
+      </main>
+      <button class="viewMore">View More</button>
+      <footer class="footClass">
+          <h2>This is the Footer</h2>
+          <p>this is the footer content this is the footer content this is the footer content this is the footer
+              content
+          </p>
+          <input class="footInput" type="text" value="Submit it Here" />
+      </footer>
+  </div>
 </body>
 </html>
