mikki's page update..

--- a/mikkis/index.html
+++ b/mikkis/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
   <div class="site-wrap">
-      <nav class="nav-tab">
-          <button class="nav-buttons"><b>H</b>ome</button>
-          <button class="nav-buttons"><b>M</b>enu</button>
-          <button class="nav-buttons"><b>E</b>vents</button>
-          <button class="nav-buttons"><b>H</b>elp</button>
-      </nav>
+      <div class="nav-tab">
+          <a class="active" href="#"><b>H</b>ome</a>
+          <a href="#"><b>M</b>enu</a>
+          <a href="#"><b>E</b>vents</a>
+          <a href="#"><b>C</b>ontact</a>
+      </div>
       <header class="headerClass">
           <h1 class="titleHeader">Mikki's</h1>
           <p class="introPar">
@@ -24,7 +24,7 @@
           </p>
       </header>
       <main>
-          <button class="clickBlog" style="background-image: url(https://images.pexels.com/photos/330771/pexels-photo-330771.jpeg?cs=srgb&dl=code-coding-computer-330771.jpg&fm=jpg); background-size: cover;">
+          <button class="clickBlog" style="background-image: url(https://images.pexels.com/photos/376464/pexels-photo-376464.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover;">
               <h3>Blog Title</h3>
               <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, enim dolorum voluptatum
