working on Mikki's

--- a/mikkis/index.html
+++ b/mikkis/index.html
@@ -15,50 +15,50 @@
           <a href="#"><b>E</b>vents</a>
           <a href="#"><b>C</b>ontact</a>
       </div>
-      <header class="headerClass">
-          <h1 class="titleHeader">Mikki's</h1>
-          <p class="introPar">
+      <header class="header-class">
+          <h1 class="title-header">Mikki's</h1>
+          <p class="intro-par">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, enim cumque est explicabo soluta
               iure rerum asperiores, veritatis exercitationem magnam voluptatibus! Nam culpa, et eligendi corrupti
               repellat accusantium reiciendis magnam!
           </p>
       </header>
-      <main>
-          <button class="clickBlog" style="background-image: url(https://images.pexels.com/photos/376464/pexels-photo-376464.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover;">
-              <h3>Blog Title</h3>
-              <p>
+      <main class="main-wrap">
+          <button class="click-blog" style="background-image: url(https://images.pexels.com/photos/376464/pexels-photo-376464.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover;">
+              <h3>Food</h3>
+              <p class="par-class">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, enim dolorum voluptatum
                   perferendis neque, eos pariatur excepturi ipsum quasi magni necessitatibus fugit reiciendis, rem
                   vel suscipit distinctio aspernatur mollitia voluptas.
               </p>
           </button>
-          <button class="clickBlog" style="background-image: url(https://images.pexels.com/photos/247791/pexels-photo-247791.png?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover;">
-              <h3>Blog Title</h3>
-              <p>
+          <button class="click-blog" style="background-image: url(https://images.pexels.com/photos/675960/mic-music-sound-singer-675960.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover;">
+              <h3>Music</h3>
+              <p class="par-class" style="background-position: center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad est facilis adipisci! Officia iusto
                   impedit ad illo, voluptates fugit, sequi repellat tenetur maxime quae velit nemo at unde incidunt
                   obcaecati.
               </p>
           </button>
-          <button class="clickBlog" style="background-image: url(https://images.pexels.com/photos/270632/pexels-photo-270632.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover;">
-              <h3>Blog Title</h3>
-              <p>
+          <button class="click-blog" style="background-image: url(https://images.pexels.com/photos/1866037/pexels-photo-1866037.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover;">
+              <h3>Local</h3>
+              <p class="par-class">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad est facilis adipisci! Officia iusto
                   impedit ad illo, voluptates fugit, sequi repellat tenetur maxime quae velit nemo at unde incidunt
                   obcaecati.
               </p>
           </button>
-          <button class="clickBlog" style="background-image: url(https://images.pexels.com/photos/1089438/pexels-photo-1089438.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover;">
+          <button class="click-blog" style="background-image: url(https://images.pexels.com/photos/1089438/pexels-photo-1089438.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover;">
               <h3>Blog Title</h3>
-              <p>
+              <p class="par-class">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad est facilis adipisci! Officia iusto
                   impedit ad illo, voluptates fugit, sequi repellat tenetur maxime quae velit nemo at unde incidunt
                   obcaecati.
               </p>
           </button>
       </main>
-      <button class="viewMore">View More</button>
-      <footer class="footClass">
+      <button class="view-more">View More</button>
+      <footer class="footer-class">
           <h2>This is the Footer</h2>
           <p>this is the footer content this is the footer content this is the footer content this is the footer
               content
