checking out canvas.. ehh..

--- a/12-26-2019/index.html
+++ b/12-26-2019/index.html
@@ -8,8 +8,10 @@
     <title>12/26/2019</title>
 </head>
 <body>
+    <div class="animate-container">
+        <div class="animate"></div>
+    </div>
     <canvas id="canvas" ></canvas>
-
     <script src="canvas.js"></script>
 </body>
 </html>
